<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.example.k4tr1n4.appvolei.PlacarActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/placar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:keepScreenOn="true"
        android:text="@string/placar_tab"
        android:textColor="#33b5e5"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/buttonA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <Button
            android:id="@+id/buttonPlusA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+" />

        <Button
            android:id="@+id/buttonLessA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/buttonPlusB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+" />

        <Button
            android:id="@+id/buttonLessB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/quadra"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/placar"
        android:layout_above="@+id/buttons"
        android:background="@color/white"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_toRightOf="@+id/buttonA"
        android:layout_toEndOf="@+id/buttonA"
        android:layout_toLeftOf="@+id/buttonB"
        android:layout_toStartOf="@+id/buttonB">

        <LinearLayout
            android:id="@+id/timeA"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:orientation="vertical">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/equipe"
                android:textAllCaps="true"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeB"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:orientation="vertical">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/equipe"
                android:textAllCaps="true"
                android:textAlignment="center"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/buttonTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start"
            android:textAlignment="center"
            android:text="@string/tempo_button"
            android:textColor="#33b5e5"
            android:textSize="30sp"
            android:textStyle="bold"
            android:padding="3dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="@string/set_button"
                android:textColor="#33b5e5"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:padding="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/partida_button"
                android:textColor="#33b5e5"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:padding="3dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/setOut"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="3"
                android:textColor="#33b5e5"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:padding="3dp"/>

            <TextView
                android:id="@+id/matchOut"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="21"
                android:textColor="#33b5e5"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:padding="3dp"/>

        </LinearLayout>



    </LinearLayout>



</RelativeLayout>
